--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -84,7 +84,7 @@ foreground = ${color.fg}
 ;   font-2 = Termsynu:size=8;-1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
-font-0 = "DroidSansM Nerd Font:size=10;2"
+font-0 = "JetBrains Mono Nerd Font:size=10;2"
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
